--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.deeppowercrew.bebetternow"
+        applicationId "com.deeppowercrew.bebetter"
         minSdk 23
         targetSdk 32
         versionCode 1
@@ -29,10 +29,17 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures{
+        viewBinding true
+    }
+
 }
 
 dependencies {
 
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.23'
+    implementation 'androidx.fragment:fragment-ktx:1.5.2'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.0'
     implementation 'com.google.android.material:material:1.6.1'
