--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 35
 
     defaultConfig {
-        applicationId "com.deeppowercrew.bebetter"
+        applicationId 'com.deeppowercrew.bebetter2'
         minSdk 23
         targetSdk 35
         versionCode 1
