--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,6 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.9.10' apply false
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
-}
+//task clean(type: Delete) {
+//    delete rootProject.buildDir
+//}
